Modify Site.Master to use Page.Title for the title and remove unnecessary div and id in form.

--- a/soft806activity/Site.Master
+++ b/soft806activity/Site.Master
@@ -4,16 +4,16 @@
 
 <html>
 <head runat="server">
-    <title></title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title><%: Page.Title %></title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
 <body>
-    <form id="form1" runat="server">
-        <div>
-            <asp:ContentPlaceHolder ID="BodyContent" runat="server">
-            </asp:ContentPlaceHolder>
-        </div>
+    <form runat="server">
+        <asp:ContentPlaceHolder ID="BodyContent" runat="server">
+        </asp:ContentPlaceHolder>
     </form>
 </body>
 </html>
